--- a/src/package.json
+++ b/src/package.json
@@ -3,15 +3,15 @@
   "version": "0.1.0",
   "main": "main.js",
   "dependencies": {
-    "@angular/common": "7",
-    "@angular/compiler": "7",
-    "@angular/core": "7",
-    "@angular/platform-browser": "7",
-    "@angular/platform-browser-dynamic": "7",
-    "core-js": "2.6",
+    "@angular/common": "^10.1.6",
+    "@angular/compiler": "^10.1.6",
+    "@angular/core": "^10.1.6",
+    "@angular/platform-browser": "^10.1.6",
+    "@angular/platform-browser-dynamic": "^10.1.6",
     "electron-store": "^6.0.0",
-    "rxjs": "6.3",
-    "tslib": "^1.11.1",
-    "zone.js": "0.8"
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^6.6.3",
+    "tslib": "^2.0.3",
+    "zone.js": "^0.11.2"
   }
 }
