--- a/package.json
+++ b/package.json
@@ -18,16 +18,16 @@
   },
   "keywords": [],
   "dependencies": {
-    "@angular/common": "7",
-    "@angular/compiler": "7",
-    "@angular/core": "7",
-    "@angular/platform-browser": "7",
-    "@angular/platform-browser-dynamic": "7",
-    "core-js": "2.6",
+    "@angular/common": "^10.1.6",
+    "@angular/compiler": "^10.1.6",
+    "@angular/core": "^10.1.6",
+    "@angular/platform-browser": "^10.1.6",
+    "@angular/platform-browser-dynamic": "^10.1.6",
     "electron-store": "^6.0.0",
-    "rxjs": "6.3",
-    "tslib": "^1.11.1",
-    "zone.js": "0.8"
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^6.6.3",
+    "tslib": "^2.0.3",
+    "zone.js": "^0.11.2"
   },
   "devDependencies": {
     "angular2-template-loader": "^0.6.2",
@@ -35,11 +35,11 @@
     "css-loader": "^3.6.0",
     "electron": "^9.1.2",
     "electron-builder": "^22.8.0",
-    "html-loader": "^1.1.0",
+    "html-loader": "^1.3.2",
     "html-webpack-plugin": "^4.4.1",
     "husky": "^4.3.0",
+    "mini-css-extract-plugin": "^1.0.0",
     "node-sass": "^4.14.1",
-    "raw-loader": "1",
     "rimraf": "^3.0.2",
     "sass-loader": "^10.0.2",
     "style-loader": "^1.2.1",
