--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "clean:dev": "rimraf ./dist/dev",
     "rebuild:dev": "yarn clean:dev && yarn build:dev",
     "pack:l": "yarn rebuild && electron-builder --l --config ./config/electron-builder.yml",
-    "pack:w": "yarn rebuild && electron-builder --w --config ./config/electron-builder.yml"
+    "pack:w": "yarn rebuild && electron-builder --w --config ./config/electron-builder.yml",
+    "format:css": "stylelint --config ./config/.stylelintrc.json --fix ./src/**/*.{css,sass,scss}"
   },
   "keywords": [],
   "dependencies": {
@@ -38,11 +39,17 @@
     "html-loader": "^1.3.2",
     "html-webpack-plugin": "^4.4.1",
     "husky": "^4.3.0",
+    "lint-staged": "^10.5.3",
     "mini-css-extract-plugin": "^1.0.0",
     "node-sass": "^4.14.1",
     "rimraf": "^3.0.2",
     "sass-loader": "^10.0.2",
     "style-loader": "^1.2.1",
+    "stylelint": "^13.8.0",
+    "stylelint-config-recommended-scss": "^4.2.0",
+    "stylelint-order": "^4.1.0",
+    "stylelint-scss": "^3.18.0",
+    "stylelint-webpack-plugin": "^2.1.1",
     "to-string-loader": "^1.1.6",
     "ts-loader": "^8.0.3",
     "typescript": "^4.0.2",
@@ -54,7 +61,12 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "node ./scripts/package.js && git add ./src/package.json"
+      "pre-commit": "node ./scripts/package.js && git add ./src/package.json && lint-staged"
     }
+  },
+  "lint-staged": {
+    "./src/**/*.{css,sass,scss}": [
+      "yarn format:css"
+    ]
   }
 }
