--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
   },
   "lint-staged": {
     "./src/**/*.{css,sass,scss}": [
-      "yarn format:css"
+      "stylelint --config ./config/.stylelintrc.json --fix"
     ]
   }
 }
