--- a/config/.stylelintrc.json
+++ b/config/.stylelintrc.json
@@ -1,7 +1,7 @@
 {
   "extends": [
     "stylelint-config-recommended-scss",
-    "stylelint-prettier/recommended",
+    "stylelint-prettier/recommended"
   ],
   "plugins": [
     "stylelint-order"
