--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "rebuild:dev": "yarn clean:dev && yarn build:dev",
     "pack:l": "yarn rebuild && electron-builder --l --config ./config/electron-builder.yml",
     "pack:w": "yarn rebuild && electron-builder --w --config ./config/electron-builder.yml",
-    "format:css": "stylelint --config ./config/.stylelintrc.json --fix ./src/**/*.{css,sass,scss}"
+    "format:css": "stylelint --config ./config/.stylelintrc.json --fix ./src/**/*.{css,sass,scss}",
+    "test": "jest --config ./config/jest.config.js"
   },
   "keywords": [],
   "dependencies": {
@@ -31,6 +32,10 @@
     "zone.js": "^0.11.2"
   },
   "devDependencies": {
+    "@angular/animations": "^10.1.6",
+    "@angular/router": "^10.1.6",
+    "@testing-library/angular": "^10.3.2",
+    "@testing-library/jest-dom": "^5.11.9",
     "angular2-template-loader": "^0.6.2",
     "copy-webpack-plugin": "^6.1.0",
     "css-loader": "^3.6.0",
@@ -39,6 +44,8 @@
     "html-loader": "^1.3.2",
     "html-webpack-plugin": "^4.4.1",
     "husky": "^4.3.0",
+    "jest": "^26.6.3",
+    "jest-preset-angular": "^8.3.2",
     "lint-staged": "^10.5.3",
     "mini-css-extract-plugin": "^1.0.0",
     "node-sass": "^4.14.1",
