--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@angular/core": "^10.1.6",
     "@angular/platform-browser": "^10.1.6",
     "@angular/platform-browser-dynamic": "^10.1.6",
+    "@ngx-translate/core": "^13.0.0",
+    "@ngx-translate/http-loader": "^6.0.0",
     "electron-store": "^6.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^6.6.3",
