--- a/package.json
+++ b/package.json
@@ -15,9 +15,14 @@
     "rebuild:dev": "yarn clean:dev && yarn build:dev",
     "pack:l": "yarn rebuild && electron-builder --l --config ./config/electron-builder.yml",
     "pack:w": "yarn rebuild && electron-builder --w --config ./config/electron-builder.yml",
-    "format:css": "stylelint --config ./config/.stylelintrc.json --fix ./src/**/*.{css,sass,scss}",
-    "format:html": "prettier -w ./src/renderer/**/*.{component.html,html}",
-    "test": "jest --config ./config/jest.config.js"
+    "pretest": "npm run lint",
+    "test": "jest --config ./config/jest.config.js",
+    "lint": "run-p lint:*",
+    "lint:prettier": "prettier --check ./src/**/*.{html,component.html}",
+    "lint:stylelint": "stylelint --config ./config/.stylelintrc.json ./src/**/*.{css,sass,scss}",
+    "fix": "run-p fix:*",
+    "fix:prettier": "prettier --write ./src/**/*.{html,component.html}",
+    "fix:stylelint": "stylelint --config ./config/.stylelintrc.json --fix ./src/**/*.{css,sass,scss}"
   },
   "keywords": [],
   "dependencies": {
@@ -52,6 +57,7 @@
     "lint-staged": "^10.5.3",
     "mini-css-extract-plugin": "^1.0.0",
     "node-sass": "^4.14.1",
+    "npm-run-all": "^4.1.5",
     "prettier": "^2.2.1",
     "prettier-loader": "^3.3.0",
     "rimraf": "^3.0.2",
@@ -83,7 +89,7 @@
       "stylelint --config ./config/.stylelintrc.json --fix"
     ],
     "./src/**/*.{html,component.html}": [
-      "prettier -w"
+      "prettier --write"
     ]
   }
 }
