--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "angular2-template-loader": "^0.6.2",
     "copy-webpack-plugin": "^6.1.0",
     "css-loader": "^3.6.0",
-    "electron": "^10.1.3",
+    "electron": "11",
     "electron-builder": "^22.8.0",
     "html-loader": "^1.3.2",
     "html-webpack-plugin": "^4.4.1",
