--- a/package.json
+++ b/package.json
@@ -26,57 +26,57 @@
   },
   "keywords": [],
   "dependencies": {
-    "@angular/common": "^10.1.6",
-    "@angular/compiler": "^10.1.6",
-    "@angular/core": "^10.1.6",
-    "@angular/platform-browser": "^10.1.6",
-    "@angular/platform-browser-dynamic": "^10.1.6",
+    "@angular/common": "^12.1.1",
+    "@angular/compiler": "^12.1.1",
+    "@angular/core": "^12.1.1",
+    "@angular/platform-browser": "^12.1.1",
+    "@angular/platform-browser-dynamic": "^12.1.1",
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
-    "electron-store": "^6.0.0",
+    "electron-store": "^8.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^6.6.3",
-    "tslib": "^2.0.3",
-    "zone.js": "^0.11.2"
+    "tslib": "^2.3.0",
+    "zone.js": "^0.11.4"
   },
   "devDependencies": {
-    "@angular/animations": "^10.1.6",
-    "@angular/router": "^10.1.6",
-    "@testing-library/angular": "^10.3.2",
-    "@testing-library/jest-dom": "^5.11.9",
+    "@angular/animations": "^12.1.1",
+    "@angular/router": "^12.1.1",
+    "@testing-library/angular": "^10.9.2",
+    "@testing-library/jest-dom": "^5.14.1",
     "angular2-template-loader": "^0.6.2",
-    "copy-webpack-plugin": "^6.1.0",
+    "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^3.6.0",
-    "electron": "11",
-    "electron-builder": "^22.8.0",
+    "electron": "^13.1.6",
+    "electron-builder": "^22.11.7",
     "html-loader": "^1.3.2",
-    "html-webpack-plugin": "^4.4.1",
+    "html-webpack-plugin": "^5.3.2",
     "husky": "^4.3.0",
     "jest": "^26.6.3",
-    "jest-preset-angular": "^8.3.2",
-    "lint-staged": "^10.5.3",
-    "mini-css-extract-plugin": "^1.0.0",
+    "jest-preset-angular": "^8.4.0",
+    "lint-staged": "^11.0.1",
+    "mini-css-extract-plugin": "^2.1.0",
     "node-sass": "^4.14.1",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.2.1",
+    "prettier": "^2.3.2",
     "prettier-loader": "^3.3.0",
     "rimraf": "^3.0.2",
-    "sass-loader": "^10.0.2",
-    "style-loader": "^1.2.1",
-    "stylelint": "^13.8.0",
+    "sass-loader": "^12.1.0",
+    "style-loader": "^3.1.0",
+    "stylelint": "^13.13.1",
     "stylelint-config-prettier": "^8.0.2",
-    "stylelint-config-recommended-scss": "^4.2.0",
+    "stylelint-config-recommended-scss": "^4.3.0",
     "stylelint-order": "^4.1.0",
-    "stylelint-prettier": "^1.1.2",
-    "stylelint-scss": "^3.18.0",
-    "stylelint-webpack-plugin": "^2.1.1",
+    "stylelint-prettier": "^1.2.0",
+    "stylelint-scss": "^3.19.0",
+    "stylelint-webpack-plugin": "^2.2.2",
     "to-string-loader": "^1.1.6",
-    "ts-loader": "^8.0.3",
-    "typescript": "^4.0.2",
-    "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12",
-    "webpack-merge": "^5.1.3",
-    "webpack-node-externals": "^2.5.2",
+    "ts-loader": "^9.2.3",
+    "typescript": "^4.3.5",
+    "webpack": "^5.44.0",
+    "webpack-cli": "^4.7.2",
+    "webpack-merge": "^5.8.0",
+    "webpack-node-externals": "^3.0.0",
     "webpack-obfuscator": "^2.1.0"
   },
   "husky": {
