--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "html-loader": "^1.3.2",
     "html-webpack-plugin": "^5.3.2",
     "husky": "^4.3.0",
+    "javascript-obfuscator": "^2.16.0",
     "jest": "^26.6.3",
     "jest-preset-angular": "^8.4.0",
     "lint-staged": "^11.0.1",
@@ -77,7 +78,7 @@
     "webpack-cli": "^4.7.2",
     "webpack-merge": "^5.8.0",
     "webpack-node-externals": "^3.0.0",
-    "webpack-obfuscator": "^2.1.0"
+    "webpack-obfuscator": "^3.3.2"
   },
   "husky": {
     "hooks": {
