--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "lint:stylelint": "stylelint --config ./config/.stylelintrc.json ./src/**/*.{css,sass,scss}",
     "fix": "run-s fix:*",
     "fix:prettier": "prettier --write ./src/**/*.{html,component.html,ts}",
-    "fix:stylelint": "stylelint --config ./config/.stylelintrc.json --fix ./src/**/*.{css,sass,scss}"
+    "fix:stylelint": "stylelint --config ./config/.stylelintrc.json --fix ./src/**/*.{css,sass,scss}",
+    "prepare": "husky install"
   },
   "keywords": [],
   "dependencies": {
@@ -51,7 +52,7 @@
     "electron-builder": "^22.11.7",
     "html-loader": "^1.3.2",
     "html-webpack-plugin": "^5.3.2",
-    "husky": "^4.3.0",
+    "husky": "^7.0.0",
     "javascript-obfuscator": "^2.16.0",
     "jest": "^26.6.3",
     "jest-preset-angular": "^8.4.0",
@@ -79,11 +80,6 @@
     "webpack-merge": "^5.8.0",
     "webpack-node-externals": "^3.0.0",
     "webpack-obfuscator": "^3.3.2"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "node ./scripts/package.js && git add ./src/package.json && lint-staged"
-    }
   },
   "lint-staged": {
     "./src/**/*.{css,sass,scss}": [
