--- a/package.json
+++ b/package.json
@@ -25,7 +25,15 @@
     "fix:stylelint": "stylelint --config ./config/.stylelintrc.json --fix ./src/**/*.{css,sass,scss}",
     "prepare": "husky install"
   },
-  "keywords": [],
+  "keywords": [
+    "electron",
+    "angular",
+    "webpack",
+    "electron-builder",
+    "localization",
+    "ngx-translate",
+    "jest"
+  ],
   "dependencies": {
     "@angular/common": "^12.1.1",
     "@angular/compiler": "^12.1.1",
