--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "electron-builder",
     "localization",
     "ngx-translate",
+    "ngrx",
     "jest"
   ],
   "dependencies": {
@@ -40,6 +41,7 @@
     "@angular/core": "^12.1.1",
     "@angular/platform-browser": "^12.1.1",
     "@angular/platform-browser-dynamic": "^12.1.1",
+    "@ngrx/store": "^12.3.0",
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
     "electron-store": "^8.0.0",
@@ -51,6 +53,7 @@
   "devDependencies": {
     "@angular/animations": "^12.1.1",
     "@angular/router": "^12.1.1",
+    "@ngrx/store-devtools": "^12.3.0",
     "@testing-library/angular": "^10.9.2",
     "@testing-library/jest-dom": "^5.14.1",
     "angular2-template-loader": "^0.6.2",
@@ -58,6 +61,7 @@
     "css-loader": "^3.6.0",
     "electron": "^13.1.6",
     "electron-builder": "^22.11.7",
+    "electron-devtools-installer": "^3.2.0",
     "html-loader": "^1.3.2",
     "html-webpack-plugin": "^5.3.2",
     "husky": "^7.0.0",
