--- a/src/package.json
+++ b/src/package.json
@@ -8,6 +8,7 @@
     "@angular/core": "^12.1.1",
     "@angular/platform-browser": "^12.1.1",
     "@angular/platform-browser-dynamic": "^12.1.1",
+    "@ngrx/store": "^12.3.0",
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
     "electron-store": "^8.0.0",
