--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "@angular/core": "^12.1.1",
     "@angular/platform-browser": "^12.1.1",
     "@angular/platform-browser-dynamic": "^12.1.1",
-    "@ngrx/store": "^12.3.0",
+    "@ngrx/effects": "^12.5.1",
+    "@ngrx/store": "^12.5.1",
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
     "electron-store": "^8.0.0",
