--- a/package.json
+++ b/package.json
@@ -71,10 +71,10 @@
     "jest-preset-angular": "^8.4.0",
     "lint-staged": "^11.0.1",
     "mini-css-extract-plugin": "^2.1.0",
-    "node-sass": "^4.14.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.3.2",
     "rimraf": "^3.0.2",
+    "sass": "^1.75.0",
     "sass-loader": "^12.1.0",
     "style-loader": "^3.1.0",
     "stylelint": "^13.13.1",
