--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "jest-preset-angular": "^8.4.0",
     "lint-staged": "^11.0.1",
     "mini-css-extract-plugin": "^2.1.0",
-    "npm-run-all": "^4.1.5",
+    "npm-run-all2": "^6.1.2",
     "prettier": "^2.3.2",
     "rimraf": "^3.0.2",
     "sass": "^1.75.0",
